--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "window.commandCenter": false,
+    "window.commandCenter": true,
     "auto-close-tag.fullMode": false,
     "window.closeWhenEmpty": false,
     "window.autoDetectColorScheme": false,
@@ -8,5 +8,29 @@
     "workbench.editSessions.autoResume": "off",
     "workbench.layoutControl.type": "both",
     "workbench.list.horizontalScrolling": false,
-    "workbench.list.smoothScrolling": false
+    "workbench.list.smoothScrolling": false,
+    "search.experimental.closedNotebookRichContentResults": false,
+    "search.experimental.quickAccess.preserveInput": false,
+    "search.quickOpen.includeSymbols": true,
+    "search.useGlobalIgnoreFiles": false,
+    "search.useParentIgnoreFiles": false,
+    "debug.allowBreakpointsEverywhere": false,
+    "debug.autoExpandLazyVariables": false,
+    "search.quickOpen.includeHistory": true,
+    "search.searchEditor.reusePriorSearchConfiguration": false,
+    "search.seedOnFocus": false,
+    "search.seedWithNearestWord": false,
+    "search.showLineNumbers": false,
+    "editor.wordWrap": "on",
+    "editor.cursorBlinking": "blink",
+    "editor.cursorSmoothCaretAnimation": "explicit",
+    "editor.cursorSurroundingLinesStyle": "default",
+    "editor.formatOnPaste": false,
+    "editor.formatOnSave": false,
+    "diffEditor.codeLens": false,
+    "diffEditor.experimental.showMoves": false,
+    "workbench.activityBar.iconClickBehavior": "toggle",
+    "workbench.statusBar.visible": true,
+    "workbench.tips.enabled": true,
+    "workbench.view.alwaysShowHeaderActions": false
 }
